Fatal error message when we close libX11 window application

Fixes:https://bugs.freedesktop.org/show_bug.cgi?id=41443

When we close any libX11 window application, we get fatal error.
XIO:  fatal IO error 11 (Resource temporarily unavailable).
Fatal error messages are strange and confusing to developers.
Error is simply because we quit the application, without exiting
while loop of XNextEvent. XCB should give same error messages as
legacy libX11 were. In order to fix this issue, I have set right error
number at xcb_connection_t::has_error.This xcb_connection_t::has_error
will be passed to default io handler of libX11, This value could then
be used to display corrrect error messages in default IO error
handler of libX11.

Signed-off-by: Arvind Umrao <arvind.umrao@oracle.com>